# portfolio-simulator

./: README.md  pyproject.toml
data/output/: portfolio_prices.csv
src/portfolio_simulator/: asset.py  portfolio_simulator.py
test/: test_asset.py  test_portfolio_simulator.py
test/data/output/: portfolio_prices.csv
