[tool.poetry]
name = "portfolio-simulator"
version = "0.1.0"
description = "portfolio simulator"
authors = ["Mohammed Saqib"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
black = "^24.3.0"
flake8 = "^4.0.0"

[flake8]
max-line-length = 85

